# CPPSFML

./: CMakeLists.txt  README.md  main.cpp
include/: Block.hpp  CircleShape.hpp  Collision.hpp  Game.hpp  GameObject.hpp  Grid.hpp  Platform.hpp  Projectile.hpp  RectangleShape.hpp  Shape.hpp  Window.hpp
src/: Block.cpp  CircleShape.cpp  Collision.cpp  Game.cpp  GameObject.cpp  Grid.cpp  Platform.cpp  Projectile.cpp  RectangleShape.cpp  Window.cpp
tests/: CMakeLists.txt
